crates/provenance-cli/src/wiki/snapshots/provenance__wiki__render__tests__snapshot_rule_page_without_scanned_binding.snap
---
source: crates/provenance-cli/src/wiki/render.rs
expression: "render_rule(\"default\", &page)"
---
<!doctype html>
<html lang="en" data-theme="statesman">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Suppress line emission for fully zero claim items - Provenance Wiki</title>
<link rel="stylesheet" href="/assets/provenance-wiki.css">
</head>
<body>
<svg width="0" height="0" style="position:absolute" aria-hidden="true">
    <defs>
      <symbol id="i-git-branch" viewBox="0 0 24 24"><path d="M6 3v12"/><circle cx="18" cy="6" r="3"/><circle cx="6" cy="18" r="3"/><path d="M18 9a9 9 0 0 1-9 9"/></symbol>
      <symbol id="i-scale" viewBox="0 0 24 24"><path d="m16 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="m2 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"/><path d="M7 21h10"/><path d="M12 3v18"/><path d="M3 7h2c2 0 5-1 7-2 2 1 5 2 7 2h2"/></symbol>
      <symbol id="i-book-open" viewBox="0 0 24 24"><path d="M12 7v14"/><path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"/></symbol>
      <symbol id="i-search" viewBox="0 0 24 24"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></symbol>
      <symbol id="i-check-circle" viewBox="0 0 24 24"><path d="M21.801 10A10 10 0 1 1 17 3.335"/><path d="m9 11 3 3L22 4"/></symbol>
      <symbol id="i-arrow-left" viewBox="0 0 24 24"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></symbol>
      <symbol id="i-message-square" viewBox="0 0 24 24"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></symbol>
      <symbol id="i-user" viewBox="0 0 24 24"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></symbol>
      <symbol id="i-calendar" viewBox="0 0 24 24"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></symbol>
      <symbol id="i-shield" viewBox="0 0 24 24"><path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"/></symbol>
      <symbol id="i-gauge" viewBox="0 0 24 24"><path d="m12 14 4-4"/><path d="M3.34 19a10 10 0 1 1 17.32 0"/></symbol>
      <symbol id="i-bot" viewBox="0 0 24 24"><path d="M12 8V4H8"/><rect width="16" height="12" x="4" y="8" rx="2"/><path d="M2 14h2"/><path d="M20 14h2"/><path d="M15 13v2"/><path d="M9 13v2"/></symbol>
    </defs>
  </svg>
<header class="chrome">
<div class="chrome-inner">
<span class="wordmark">Provenance<span class="scope">default</span></span>
<nav aria-label="Breadcrumb"><a href="/">default</a></nav>
<nav class="global-nav" aria-label="Wiki"><a href="/">Atlas</a><a href="/domains/">Domains</a><a href="/search/">Search</a></nav>
<label class="theme-select">Theme
<select id="theme-select">
<option value="statesman" selected>Statesman</option>
<option value="piano">Piano</option>
<option value="latte">Catppuccin Latte</option>
<option value="mocha">Catppuccin Mocha</option>
<option value="dracula">Dracula</option>
</select>
</label>
</div>
</header>
<div class="accent-bar rule" aria-hidden="true"></div>
<div class="container">
<a class="back-link rule" href="/">
<svg class="icon"><use href="#i-arrow-left"/></svg>default
</a>
<div class="title-row">
<svg class="icon rule" aria-hidden="true"><use href="#i-book-open"/></svg>
<div>
<h1>Suppress line emission for fully zero claim items</h1>
<div class="badge-row">
<span class="type-badge rule"><svg class="icon"><use href="#i-book-open"/></svg>Rule</span>
<span class="status-badge active"><svg class="icon"><use href="#i-check-circle"/></svg>Active</span>
<span class="sev high">high</span>
<span class="id-chip">rule_sah_inv_016</span>
</div>
</div>
</div>
<div class="body-grid">
<div class="body-main">
<section>
<h2 class="section-head sh-rule">Statement</h2>
<p class="prose">No invoice lines shall be emitted for fully zero claim items.</p>
</section>
<section>
<h2 class="section-head sh-rule">Rule Function</h2>
<p class="empty-state">No function bound</p>
</section>
<section>
<h2 class="section-head sh-rule"><svg class="icon"><use href="#i-check-circle"/></svg>Verification</h2>
<p class="empty-state">Not verified</p>
<p class="scan-note">Code scan at commit <code>9f2c1ab</code></p>
</section>
<section>
<h2 class="section-head sh-resolution"><svg class="icon"><use href="#i-scale"/></svg>Produced By</h2>
<ul class="link-list">
<li><a href="/resolutions/res_split/">SaveInvoice per-portion split &amp; $0 suppression extraction</a></li>
</ul>
</section>
<section>
<h2 class="section-head sh-requirement"><svg class="icon"><use href="#i-git-branch"/></svg>Upstream Requirements</h2>
<ul class="link-list">
<li><a href="/requirements/req_saveinvoice_split/">SaveInvoice shall split each claim item into portions</a></li>
</ul>
</section>
<section>
<h2 class="section-head sh-source"><svg class="icon"><use href="#i-book-open"/></svg>Sources</h2>
<ul class="link-list">
<li><a href="/sources/source_schads/">SCHADS Award mapping</a></li>
</ul>
</section>
</div>
<aside class="body-margin">
<div class="classification">
<h3 class="margin-head">Classification</h3>
<div class="row"><svg class="icon"><use href="#i-gauge"/></svg><span class="k">Severity</span><span class="v">high</span></div>
</div>
</aside>
</div>
</div>
<script>
    (function () {
      var KEY = "provenance-wiki-theme";
      var root = document.documentElement;
      var select = document.getElementById("theme-select");

      function apply(theme) {
        root.setAttribute("data-theme", theme);
        select.value = theme;
      }

      var saved = null;
      try { saved = localStorage.getItem(KEY); } catch (e) {}
      if (saved) {
        apply(saved);
      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
        apply("mocha");
      }

      select.addEventListener("change", function () {
        apply(select.value);
        try { localStorage.setItem(KEY, select.value); } catch (e) {}
      });
    })();
</script>
</body>
</html>
